kustomization/components/codegen-linux-mcp-prod/networkpolicy/allow-to-linux-hosts.yml
# @codegen-command: ansible-playbook plays/codegen/linux-mcp.yml
# @generated
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-linux-hosts-networkpolicy
spec:
  egress:
    - ports:
        - port: 22
      to:
        - ipBlock:
            cidr: 23.94.59.52/32 # choros.tswn.us
        - ipBlock:
            cidr: 10.11.0.120/32 # gpuworker01.hogs.tswn.us
        - ipBlock:
            cidr: 10.11.0.121/32 # gpuworker02.hogs.tswn.us
        - ipBlock:
            cidr: 10.10.0.6/32 # harvest.hogs.tswn.us
        - ipBlock:
            cidr: 10.117.0.24/32 # monitor.house.gem.hogs.tswn.us
        - ipBlock:
            cidr: 10.11.0.101/32 # node01.hogs.tswn.us
        - ipBlock:
            cidr: 10.11.0.104/32 # worker01.hogs.tswn.us
        - ipBlock:
            cidr: 10.11.0.105/32 # worker02.hogs.tswn.us
        - ipBlock:
            cidr: 10.11.0.106/32 # worker03.hogs.tswn.us
  podSelector:
    matchLabels:
      app.kubernetes.io/name: linux-mcp
  policyTypes:
    - Egress
